--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "parcel-project-template",
+  "name": "weatherapp",
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://Hubert2113.github.io/WeatherApp",
+  "homepage": "https://michal-wolski.github.io/WeatherApp/",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /WeatherApp/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Hubert2113/WeatherApp.git"
+    "url": "git+https://github.com/michal-wolski/WeatherApp.git"
   },
   "keywords": [],
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Hubert2113/WeatherApp/issues"
+    "url": "https://github.com/michal-wolski/WeatherApp/issues"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
